@@ -1,3 +1,4 @@
+#include <sys/inotify.h>
 #include <sys/types.h>
 #include <sys/file.h>
 #include <fcntl.h>
