@@ -9,7 +9,7 @@
  *
  * Public domain.
  */
-
+#include <unistd.h>
 #include <sys/types.h>
 #include <fcntl.h>
 #include <poll.h>
