@@ -9,6 +9,8 @@ Release @version@-@release@ Start 08/02/2024 End XX/XX/XXXX
 - 11/03/2024
 03. installer.c: fixed displaying size variable, fixed allocation of zerobuf
     variable
+- 29/04/2024
+04. trypoll.c, tryshsgr.c: Fix compiler warnings
 
 * Mon Jan 01 2024 19:01:07 +0000 Manvendra Bhangui <ucspi-tcp@indimail.org> 1.1.3-1.1${?dist}
 Release 1.1.3-1.1 Start 27/04/2023 End 01/01/2024
