@@ -12,6 +12,7 @@ Release @version@-@release@ Start 05/02/2024 End XX/XX/XXXX
 06. supervise.c: added comments, updated variable name for flagwant, spid arg
 - 12/04/2024
 07. daemontools.spec.in, debian/preinst.in: fixed logdir permissions
+08. minisvc.in: fix for missing qmail group
 
 * Sun Mar 03 2024 12:20:15 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.4-1.1%{?dist}
 Release 1.1.4-1.1 Start 09/02/2024 End 03/02/2024
